<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robko01_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 python package for supproting Robko01</description>
  <maintainer email="orlin369@gmail.com">user</maintainer>
  <license>Apache License 2.0</license>

  <!-- <depend>rclpy</depend> -->
  <!-- <depend>trajectory_msgs</depend> -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>ament_cmake</depend>
  <build_depend>launch</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>